# ChangeLog for dev-util/gtk-doc
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/gtk-doc/ChangeLog,v 1.32 2004/06/29 04:21:16 tgall Exp $

  28 Jun 2004; Tom Gall <tgall@gentoo.org> gtk-doc-1.1.ebuild:
  stable on ppc64, bug #54792

  30 May 2004; L. Boshell <leonardop@gentoo.org> gtk-doc-1.1.ebuild:
  Include `debug' in IUSE.

  21 Mar 2004; Joshua Kinard <kumba@gentoo.org> gtk-doc-1.1.ebuild:
  Marked stable on mips.

  08 Mar 2004; Brian Jackson <iggy@gentoo.org> gtk-doc-1.1.ebuild:
  remove s390 from keywords

*gtk-doc-1.2 (08 Mar 2004)

  08 Mar 2004; L. Boshell <leonardop@gentoo.org> gtk-doc-1.2.ebuild:
  New version, dependencies adjustments, install examples, install .el
  resource if the `emacs' USE var is active.

  04 Mar 2004; Joshua Kinard <kumba@gentoo.org> gtk-doc-1.1.ebuild:
  Added ~mips to KEYWORDS to satisfy repoman deps.

  02 Mar 2004; Brian Jackson <iggy@gentoo.org> gtk-doc-1.1.ebuild:
  added s390 to keywords

  14 Feb 2004; <spider@gentoo.org> gtk-doc-0.9-r2.ebuild, gtk-doc-1.0.ebuild,
  gtk-doc-1.1.ebuild:
  finish off some DEPEND/RDEPEND bugs. (pkgconfig to DEPEND only)

  12 Jan 2004; Guy Martin <gmsoft@gentoo.org> gtk-doc-1.1.ebuild :
  Marked stable on hppa.

  09 Jan 2004; Jason Wever <weeve@gentoo.org> gtk-doc-1.1.ebuild:
  Marked stable on sparc.

  06 Oct 2003; Mike Gardiner <obz@gentoo.org> gtk-doc-1.1.ebuild:
  Marked stable on x86

  23 Sep 2003; Bartosch Pixa <darkspecter@gentoo.org> gtk-doc-1.1.ebuild:
  set ppc in keywords

  15 Jul 2003; Todd Sunderlin <todd@gentoo.org> gtk-doc-1.0.ebuild:
  Marked stable for sparc

  29 Jun 2003; Aron Griffis <agriffis@gentoo.org> gtk-doc-1.1.ebuild:
  Mark stable on alpha

  30 May 2003; Luca Barbato <lu_zero@gentoo.org> gtk-doc-1.0.ebuild :
  Added ppc to keywords.

*gtk-doc-1.1 (18 Apr 2003)

  18 Apr 2003; foser <foser@gentoo.org> gtk-doc-1.1.ebuild :
  New version, now use USE debug
