@@ -1,6 +1,8 @@
-MD5 cd35ba511e4e55ba1eb0c5fa1cf27273 ChangeLog 3463
+MD5 e39a04ce65ff454208be14e7069954fa ChangeLog 3640
 MD5 df29f4e6c72dd67fb3bb9e534303d7c5 gtk-doc-1.1.ebuild 938
 MD5 b7ce91b597ca57ce27c0e52e3bab6539 gtk-doc-1.2.ebuild 845
 MD5 03ad2e6c4ab41244af1015a8bbb0b39f metadata.xml 158
+MD5 e8c6d5cb1b3893582bfcdca773361ed4 gtk-doc-1.2-r1.ebuild 1032
 MD5 c036d436f5c42ec78ef0bb5507eb5437 files/digest-gtk-doc-1.1 64
 MD5 9e9bf533df75a1c8173b97715f5391a6 files/digest-gtk-doc-1.2 64
+MD5 9e9bf533df75a1c8173b97715f5391a6 files/digest-gtk-doc-1.2-r1 64
