@@ -1,0 +1,1 @@
+MD5 7776ad690ca6baaaf071c83b51d2a234 gtk-doc-1.2.tar.bz2 134258
