@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/gtk-doc
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/gtk-doc/ChangeLog,v 1.32 2004/06/29 04:21:16 tgall Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/gtk-doc/ChangeLog,v 1.33 2004/09/18 10:10:42 leonardop Exp $
+
+*gtk-doc-1.2-r1 (18 Sep 2004)
+
+  18 Mar 2004; Leonardo Boshell <leonardop@gentoo.org> gtk-doc-1.2-r1.ebuild:
+  Don't inherit from the gnome2 eclass. Reworked dependencies.
 
   28 Jun 2004; Tom Gall <tgall@gentoo.org> gtk-doc-1.1.ebuild:
   stable on ppc64, bug #54792
